# python-cli-project

./: .gitignore  README.md  pyproject.toml
skills/demo-cli/: SKILL.md
skills/demo-cli/references/: api-contract.md  workflow.md
skills/python-cli-project/: skill.md
src/demo_cli/: __init__.py  __main__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
