[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "python-cli-demo"
version = "0.1.0"
description = "A simple Python CLI tool demo with skill documentation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12.0",
]
keywords = ["cli", "demo", "tool"]

[project.scripts]
demo-cli = "demo_cli.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = {where = ["src"]}
